--- a/NodeBasic/package.json
+++ b/NodeBasic/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/ejs": "^2.6.3",
     "@types/express": "^4.17.1",
+    "ejs": "^2.7.1",
     "express": "^4.17.1"
   },
   "devDependencies": {
