--- a/NodeBasic/package.json
+++ b/NodeBasic/package.json
@@ -6,16 +6,25 @@
   "type": "module",
   "scripts": {
     "start": "nodemon src/index.ts",
+    "debug": "node-debug --no-debug-brk src/index.ts",
     "build": "tsc -p ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bluebird": "^3.5.27",
     "@types/ejs": "^2.6.3",
     "@types/express": "^4.17.1",
+    "@types/mysql2": "github:types/mysql2",
+    "@types/sequelize": "^4.28.4",
+    "@types/validator": "^10.11.3",
     "ejs": "^2.7.1",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mysql2": "^1.7.0",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^5.19.0",
+    "sequelize-cli": "^5.5.1"
   },
   "devDependencies": {
     "@types/node": "^12.7.2",
