--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "mongodb": "^3.1.6",
+    "moongoose": "0.0.5",
     "mysql2": "^1.6.1",
     "pug": "^2.0.3",
+    "save": "^2.4.0",
     "sequelize": "^5.0.0-beta.11"
   }
 }
