--- a/package.json
+++ b/package.json
@@ -19,10 +19,9 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "mongodb": "^3.1.6",
-    "moongoose": "0.0.5",
+    "mongoose": "^5.7.4",
     "mysql2": "^1.6.1",
     "pug": "^2.0.3",
-    "save": "^2.4.0",
     "sequelize": "^5.0.0-beta.11"
   }
 }
