--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.17.0",
     "mongodb": "^3.1.6",
     "mongoose": "^5.7.4",
     "mysql2": "^1.6.1",
