--- a/package.json
+++ b/package.json
@@ -11,20 +11,22 @@
   "author": "Maximilian Schwarzmüller",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^1.18.3"
+    "nodemon": "^1.19.4"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
-    "connect-mongodb-session": "^2.2.0",
-    "cookie-parser": "^1.4.4",
-    "ejs": "^2.6.1",
+    "connect-flash": "^0.1.1",
+    "connect-mongodb-session": "^2.0.3",
+    "csurf": "^1.9.0",
+    "ejs": "^2.7.4",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
-    "express-session": "^1.17.0",
-    "mongodb": "^3.1.6",
-    "mongoose": "^5.7.5",
+    "express-session": "^1.15.6",
+    "mongodb": "^3.4.1",
+    "mongoose": "^5.8.3",
     "mysql2": "^1.6.1",
     "pug": "^2.0.3",
-    "sequelize": "^5.0.0-beta.11"
+    "sequelize": "^5.21.3"
   }
 }
