--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
+    "express-validator": "^6.3.1",
     "mongodb": "^3.4.1",
     "mongoose": "^5.8.3",
     "mysql2": "^1.6.1",
