--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "nodemailer": "^6.4.2",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "pug": "^2.0.3",
-    "sequelize": "^5.21.3"
+    "sequelize": "^5.21.3",
+    "pdfkit": "^0.8.3"
   }
 }
