--- a/package.json
+++ b/package.json
@@ -30,8 +30,9 @@
     "mysql2": "^1.6.1",
     "nodemailer": "^6.4.2",
     "nodemailer-sendgrid-transport": "^0.2.0",
+    "pdfkit": "^0.8.3",
     "pug": "^2.0.3",
     "sequelize": "^5.21.3",
-    "pdfkit": "^0.8.3"
+    "stripe": "^8.1.0"
   }
 }
