--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "nodejs-rest-api",
   "version": "1.0.0",
   "description": "None",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/BloodShok/UdemyLernNodeJS/issues"
   },
-  "homepage": "https://github.com/BloodShok/UdemyLernNodeJS#readme"
+  "homepage": "https://github.com/BloodShok/UdemyLernNodeJS#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
+  }
 }
