--- a/NodeJs/package.json
+++ b/NodeJs/package.json
@@ -19,7 +19,10 @@
   "homepage": "https://github.com/BloodShok/UdemyLernNodeJS#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-validator": "^6.3.1",
+    "mongoose": "^5.8.7",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
