--- a/NodeJs/package.json
+++ b/NodeJs/package.json
@@ -1,33 +1,32 @@
 {
-  "name": "nodejs-rest-api",
+  "name": "nodejs-complete-guide",
   "version": "1.0.0",
-  "description": "None",
-  "main": "app.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/BloodShok/UdemyLernNodeJS.git"
+    "url": "https://git-codecommit.us-east-1.amazonaws.com/v1/repos/udemy-course-nodejs-complete"
   },
-  "author": "Ivan Palii",
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/BloodShok/UdemyLernNodeJS/issues"
-  },
-  "homepage": "https://github.com/BloodShok/UdemyLernNodeJS#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "express-validator": "^6.3.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.8.7",
-    "multer": "^1.4.2",
-    "socket.io": "^2.3.0"
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "express-graphql": "^0.6.12",
+    "express-validator": "^5.3.0",
+    "graphql": "^14.0.2",
+    "jsonwebtoken": "^8.3.0",
+    "mongoose": "^5.3.2",
+    "multer": "^1.4.0",
+    "socket.io": "^2.1.1",
+    "validator": "^12.1.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2"
+    "nodemon": "^1.18.4"
   }
 }
